# edgar-rag-skeleton

./: .gitignore  alembic.ini  architecture.md  docker-compose.yml  pyproject.toml
app/: chunk.py  cli.py  client.py  db.py  db_postgres.py  ingest.py  llm.py  main.py  retrieve.py
app/application/: citations.py  embedding_service.py  ingestion_service.py  retrieval_service.py
app/domain/: chunk.py  document.py  filing.py  listed_security.py  section.py  values.py
app/infrastructure/chunking/: models.py  section_chunker.py
app/infrastructure/edgar/: client.py  models.py  ticker_resolver.py
app/infrastructure/parsing/: filing_parser.py  models.py
app/infrastructure/queries/: corpus_status.py  models.py
app/infrastructure/repositories/: chunk_repo.py  db.py  document_repo.py  filing_repo.py  listed_security_repo.py  section_repo.py
docs/: dogfooding-log.md
migrations/: env.py
migrations/versions/: e420dedd72c0_initial_schema_with_pgvector.py
